--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-scroll-section": "^3.1.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "styled-components": "^5.2.0",
+    "styled-components-modifiers": "^1.2.5",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
